# krisztian-kovacs-portfolio

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  about.html  blog.html  build.rs  cv.html  index.html  projects.html
content/blog/: 2025-01-building-portfolio-rust-leptos.md  2025-01-kubernetes-homelab.md
css/: shared-themes.css
images/: README.md
js/: shared.js
migrations/: 20251215011430_initial_schema.sql  20251216195750_add_rate_limits.sql  20251216210000_add_github_cache.sql
src/: app.rs  lib.rs  main.rs
src/blog/: data.rs  mod.rs
src/components/: color_mode_toggle.rs  contact_modal.rs  language_toggle.rs  mod.rs  theme_toggle.rs
src/db/: contact.rs  github.rs  mod.rs  models.rs  pool.rs
src/email/: mod.rs
src/github/: mod.rs
src/i18n/: mod.rs  translations.rs
src/pages/: about.rs  blog.rs  cv.rs  mod.rs  projects.rs
src/server_fns/: contact.rs  github.rs  mod.rs
src/themes/: color_mode.rs  mod.rs
static_v1/: index.html
static_v1/js/: shared.js
style/: main.scss
